--- a/index.html
+++ b/index.html
@@ -10,9 +10,21 @@
 </head>
 
 <body>
-    <h1>weeeeeeeee</h1>
-    <h2></h2>
-    
+    <h1>jkadfqhoihtqa</h1>
+ 
+<div="stare" >
+    <h2>rfgjkwgabfegfkr</h2>
+    <img src="https://i.pinimg.com/736x/4c/97/85/4c9785f0e8f4f1d801432fba758af5d5.jpg" alt="0-0" />
+    <p>failgfileugfkjbk akfhjklaf fakljhkhfiurth ahiughqoprutjoiqhrg ghjkshoihg </p>
+ </div>   
+
+ <div>
+    <img src="https://tse4.mm.bing.net/th/id/OIP.tbBYbVBbyzdyKzLLP-3WfQHaJJ?r=0&rs=1&pid=ImgDetMain&o=7&rm=3" alt="0u0" />
+    <p>oaedfkhbaiu abhgjkabgkj ashgiuroiqwt gohafogihkg hagjkhiogho iowryjowjgoi</p>
+ </div>
+
+    <img src="https://i.pinimg.com/736x/15/9c/89/159c89aa69dd20a9669f112bf07930f9.jpg" alt="0~0" />
+    <p> fkjagfiarh aufqoira fnajklhfkh agkhkfgh aughuire tdzst gsllsjg skghioy gjkl</p>
 
 </body>
 </html>
