--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
     <title>Blogpost</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=TASA+Explorer:wght@400..800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=TASA+Explorer:wght@400..800&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <h1>jkadfqhoihtqa</h1>
  
-<div="stare" >
+    <div>
+    <h2 class="stare">
     <h2>rfgjkwgabfegfkr</h2>
     <img src="https://i.pinimg.com/736x/4c/97/85/4c9785f0e8f4f1d801432fba758af5d5.jpg" alt="0-0" />
     <p>failgfileugfkjbk akfhjklaf fakljhkhfiurth ahiughqoprutjoiqhrg ghjkshoihg </p>
- </div>   
+    </div>   
 
  <div>
+    <h3 class="" /h3>
     <img src="https://tse4.mm.bing.net/th/id/OIP.tbBYbVBbyzdyKzLLP-3WfQHaJJ?r=0&rs=1&pid=ImgDetMain&o=7&rm=3" alt="0u0" />
     <p>oaedfkhbaiu abhgjkabgkj ashgiuroiqwt gohafogihkg hagjkhiogho iowryjowjgoi</p>
  </div>
