--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=TASA+Explorer:wght@400..800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -20,13 +21,18 @@
     </div>   
 
  <div>
-    <h3 class="" /h3>
+    <h2 class="smile">
+    <h2> jkedghkwegkfgkjgfkg </h2>
     <img src="https://tse4.mm.bing.net/th/id/OIP.tbBYbVBbyzdyKzLLP-3WfQHaJJ?r=0&rs=1&pid=ImgDetMain&o=7&rm=3" alt="0u0" />
     <p>oaedfkhbaiu abhgjkabgkj ashgiuroiqwt gohafogihkg hagjkhiogho iowryjowjgoi</p>
  </div>
 
+ <div>
+    <h2 class="rizz"></h2>
+    <h2> dgbjkgdjkgfjhvjh </h2>
     <img src="https://i.pinimg.com/736x/15/9c/89/159c89aa69dd20a9669f112bf07930f9.jpg" alt="0~0" />
     <p> fkjagfiarh aufqoira fnajklhfkh agkhkfgh aughuire tdzst gsllsjg skghioy gjkl</p>
+</div>
 
 </body>
 </html>
